# VitaSync2

./: CMakeLists.txt  README.md  chatwindow.cpp  chatwindow.h  loginwindow.cpp  loginwindow.h  mainwindow.cpp  mainwindow.h
